force-app/main/default/objects/Race__c/fields/Amount_Of_Race_Results__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Race_Results__c</fullName>
    <description>Amount of Race Results for current race</description>
    <label>Amount Of Race Results</label>
    <summaryForeignKey>Race_Result__c.Grand_Prix__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>