force-app/main/default/objects/Race__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>DATEVALUE( $System.OriginDateTime)</defaultValue>
    <description>Date of the Race</description>
    <inlineHelpText>Date of the Race</inlineHelpText>
    <label>Date of the Race</label>
    <required>true</required>
    <type>Date</type>
</CustomField>