force-app/main/default/objects/Race__c/fields/Podium_Second__c.field-meta.xml
<CustomField>
    <fullName>Podium_Second__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>2nd place</description>
    <label>Podium Second</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races (Podium Second)</relationshipLabel>
    <relationshipName>Race_2nd_place</relationshipName>
    <type>Lookup</type>
</CustomField>