force-app/main/default/objects/Race__c/fields/Podium_Third__c.field-meta.xml
<CustomField>
    <fullName>Podium_Third__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>3rd place</description>
    <label>Podium Third</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races (Podium Third)</relationshipLabel>
    <relationshipName>Race_3rd_place</relationshipName>
    <type>Lookup</type>
</CustomField>