force-app/main/default/objects/Race__c/fields/Track__c.field-meta.xml
<CustomField>
    <fullName>Track__c</fullName>
    <description>Race Track</description>
    <inlineHelpText>current track</inlineHelpText>
    <label>Track</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AVUS</fullName>
                <default>true</default>
                <label>AVUS</label>
            </value>
            <value>
                <fullName>Circuit de Monaco</fullName>
            </value>
            <value>
                <fullName>Mosport Park</fullName>
            </value>
            <value>
                <fullName>Nurburgring</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>