force-app/main/default/objects/Race__c/fields/Winer__c.field-meta.xml
<CustomField>
    <fullName>Winer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>1st place</description>
    <label>Winer</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Races</relationshipLabel>
    <relationshipName>Race_1st_place</relationshipName>
    <type>Lookup</type>
</CustomField>