force-app/main/default/objects/Race__c/validationRules/Only_one_2nd.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_2nd</fullName>
    <active>true</active>
    <description>There can be only one 2nd place.</description>
    <errorConditionFormula>Podium_Second__c &lt;&gt; NULL  &amp;&amp; (Podium_Second__c = Winer__c  ||  Podium_Second__c = Podium_Third__c)</errorConditionFormula>
    <errorMessage>There can be only one 2nd place.
Are you trying to put the same driver into a couple of positions on the scoreboard?</errorMessage>
</ValidationRule>