force-app/main/default/objects/Race__c/validationRules/Only_one_3rd.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_3rd</fullName>
    <active>true</active>
    <description>There can be only one 3nd place.</description>
    <errorConditionFormula>Podium_Third__c &lt;&gt; NULL  &amp;&amp; (Podium_Third__c = Winer__c  ||  Podium_Third__c = Podium_Second__c)</errorConditionFormula>
    <errorMessage>There can be only one 3nd place.
Are you trying to put the same driver into a couple of positions on the scoreboard?</errorMessage>
</ValidationRule>