force-app/main/default/objects/Race__c/validationRules/Only_one_winner.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_winner</fullName>
    <active>true</active>
    <description>There can be only one winner.</description>
    <errorConditionFormula>Winer__c &lt;&gt; NULL  &amp;&amp; (Winer__c = Podium_Second__c  ||  Winer__c = Podium_Third__c)</errorConditionFormula>
    <errorMessage>There can be only one winner.
Are you trying to put the same driver into a couple of positions on the scoreboard?</errorMessage>
</ValidationRule>